[package]
name = "lanta"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"


[[bin]]
name = "lanta"
doc = false

[dependencies]
directories = "2.0"
fern = "0.5"
failure = "0.1"
libc = "0.2"
log = "0.4"
log-panics = { version = "2.0", features = ["with-backtrace"] }
serde_yaml = "0.8"
x11 = "2.18"
xdg = "2.2"

[dependencies.serde]
version = "1.0.100"
features = ["derive"]

[dependencies.xcb]
version = "0.8"
features = ["randr"]

[dependencies.xcb-util]
version = "0.2"
features = ["ewmh", "icccm", "keysyms"]


[profile.release]
debug = true
