[package]
name = "lanta"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"


[[bin]]
name = "lanta"
doc = false

[dependencies]
directories = "2.0"
log = "0.4"
serde_yaml = "0.8"
x11 = "2.18"
xdg = "2.2"

[dependencies.env_logger]
version = "0.6.2"
default_features = false

[dependencies.serde]
version = "1.0.100"
features = ["derive"]

[dependencies.xcb]
version = "0.8"
features = ["randr"]

[dependencies.xcb-util]
version = "0.2"
features = ["ewmh", "icccm", "keysyms"]


[profile.release]
debug = true
panic = "abort"
